[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/textures/miscs/bullet.png" type="Texture" id=1]
[ext_resource path="res://assets/scripts/global/Bullet.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/gun_shot.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 3 )

[node name="Bullet" type="Area2D"]
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 5.0
one_shot = true
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -1.43051e-07, 2.38419e-07 )
scale = Vector2( 0.4, 0.4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -4.76837e-07, 0 )
texture = ExtResource( 1 )

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
